client/game.css
/* ... */
.neighbor {
    display: none;
    position: relative;
    cursor: pointer;
    margin-top: 4px;
}

.neighbor > div:nth-child(1) {
    width: 34px;
    height: 34px;
}

.neighbor_info {
    margin-left: 4px;
    margin-right: 4px;
    height: 34px;
    flex-grow: 1;
}

.neighbor_brief {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    line-height: 20px;
}

.neighbors .statbar {
    height: 6px;
    border-radius: 3px;
    width: 100%;
}

.neighbors .statvalue {
    height: 6px;
    width: 20%;
}

@keyframes enter {
    from {left: -180} to {left: 0}
}
.do_enter { animation: enter 0.4s ease-out; }

@keyframes exit {
    0% {left: 0px; height: 34px;}
    100% {left: -180px; height: 0px;}
}
.do_exit { animation: exit 0.4s ease-out; }

/* The main box is a scrolling history of the player's commands and
   interactions. */

.main {
    grid-area: main;
}

/* The map box shows a map of the area around the player's avatar. */

.map {
    grid-area: map;
    height: 0px;
    padding-top: 100%;
    position: relative;
    overflow: hidden;
}

.map canvas {
    width: 100%;
    height: 100%;
    border-radius: 5px;
    position: absolute;
    top: 0px;
    left: 0px;
}

/* The selector buttons determine what is displayed in the rightbar box. */

.selector {
    grid-area: selector;
}

#inventory {
    background-image: url('icons/knapsack.png');
}

#equipment {
    background-image: url('icons/shirt.png');
}

#combat {
    background-image: url('icons/swords-emblem.png');
}

#skills {
    background-image: url('icons/skills.png');
}

#quests {
    background-image: url('icons/quests.png');
}

#chat {
    background-image: url('icons/discussion.png');
}

#local_map {
    background-image: url('icons/treasure-map.png');
}

#world_map {
    background-image: url('icons/wireframe-globe.png');
}

/* The rightbar box shows one of several panes. */

.rightbar {
    grid-area: rightbar;
    padding: 3px;
}

/* The chat pane shows messages to/from other players and chat channels. */

#chat_pane {
    display: none;
}

/* The equipment pane shows items that the player's avatar has equipped.  */

#equipment_pane {
    display: none;
}

#equipment_pane > div {
}

#equipment_pane > div > div {
    display: flex;
    justify-content: space-between;
    flex-flow: row wrap;
    width: 100%;
}

#equipment_pane > div > div > div:nth-child(odd) {
    flex: 0 1 25%;
    margin-top: 3px;
    height: 24px;
    line-height: 20px;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
}

#equipment_pane > div > div > div:nth-child(even) {
    flex: 0 1 75%;
    display: flex;
    margin-top: 3px;
}

#equipment_pane > div > div > div:nth-child(even) > div:nth-child(1) {
    width: 24px;
    height: 24px;
}

#equipment_pane > div > div > div:nth-child(even) > div:nth-child(2) {
    flex-grow: 1;
    line-height: 20px;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    margin-left: 4px;
}

#equipment_pane > div > hr {
    margin: 5px 0;
    border-bottom: 1px solid #53535f;
}

/* The inventory pane shows items that the player's avatar is carrying. */

#inventory_pane {
}

#inventory_contents {
    display: flex;
    justify-content: space-between;
    flex-flow: row wrap;
    width: 100%;
}

#inventory_contents > div {
    flex: 0 0 50%;
    display: flex;
    max-width: 50%;
    margin-top: 3px;
}

#inventory_contents > div > div:nth-child(1) {
    width: 24px;
    height: 24px;
}

#inventory_contents > div > div:nth-child(2) {
    flex-grow: 1
    line-height: 20px;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    margin-left: 4px;
}

/* The combat pane shows resources, attributes that determine combat modifiers,
   and immunities. */

#combat_pane {
    display: none;
}

#combat_pane > div {
}

#combat_pane h3 {
    flex: 0 0 100%;
    font: 10pt artifika;
    border-bottom: 1px solid #53535f;
    margin-top: 10px;
    text-align: center;
}

.combat_value {
    flex: 0 0 40%;
    line-height: 1.5;
}

.combat_value > div {
    display: inline-block;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.combat_value > div:nth-child(1) {
    width: 75%;
    text-align: left;
}

.combat_value > div:nth-child(2) {
    width: 25%;
    text-align: right;
}

#block:after, #dodge:after, #critical_chance:after, #critical_damage:after {
    content: "%"
}

#resources {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    width: 100%;
}

#resources .combat_value {
    font-size: 12pt;
    flex: 0 0 28%;
}

.combat_values {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    width: 100%;
}

/* The skills pane shows unspent karma and current/max rank in known skills. */

#skills_pane {
    display: none;
}

#skills_pane > div {
}

#unspent_karma {
    text-align: center;
    margin-top: 5pt;
    margin-bottom: 10px;
}

#skills_pane > div:nth-child(even) {
    background-color: #353538;
}

#skills_pane > div:nth-child(n + 1) {
    margin-top: 4px;
    padding: 4px;
    cursor: pointer;
}

#skills_pane > div:nth-child(n + 1) > div:nth-child(1) {
    display: inline-block;
    width: 70%;
    text-align: left;
}

#skills_pane > div:nth-child(n + 1) > div:nth-child(2) {
    display: inline-block;
    width: 30%;
    text-align: right;
}

/* The quests pane lists active quests. */

#quests_pane {
    display: none;
}

#quests_pane > div {
    margin-top: 4px;
    padding: 4px;
    cursor: pointer;
}

#quests_pane > div:nth-child(even) {
    background-color: #353538;
}

#quests_pane > div > div:nth-child(1) {
    color: #ffd898;
}

#quests_pane > div > div:nth-child(2) {
    margin-top: 4px;
    margin-left: 20px;
}

/* The left buttonbox contains "system" buttons. */

.leftbuttons {
    grid-area: leftbuttons;
}

#quit {
    background-image: url('icons/exit-door.png');
}

#settings {
    background-image: url('icons/cog.png');
}
/* ... */

